# AT_REDES_LINUX_PYTHON

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/at_redes_linux_infnet_eds_julia_tallarico/: __init__.py  cli.py
src/exercises/: captura_pacotes.py  dns_python.py  fuzzing.py  index.html  injecao_captura_scapy.py  injecao_pacotes.py  nmap_redes.py  questao10.py  questao11.py  questao9.py  server.py
src/exercises/nginx_julia/: nginx.conf
src/exercises/nginx_julia/html/: index.html
tests/: __init__.py  test_at_redes_linux_infnet_eds_julia_tallarico.py
