[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "at_redes_linux_infnet_eds_julia_tallarico"
version = "0.0.1"
description = "AT da matéria de redes"
readme = "README.rst"
authors = [
  {name = "Julia Tallarico", email = "julia.tallcaroline@outlook.com"}
]
maintainers = [
  {name = "Julia Tallarico", email = "julia.tallcaroline@outlook.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/juliatlrc/at_redes_linux_infnet_eds_julia_tallarico/issues"
changelog = "https://github.com/juliatlrc/at_redes_linux_infnet_eds_julia_tallarico/blob/master/changelog.md"
homepage = "https://github.com/juliatlrc/at_redes_linux_infnet_eds_julia_tallarico"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

